--- a/twiddlerApp/static/client.html
+++ b/twiddlerApp/static/client.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>My Web Page</title>
-        <link href="client.css" type="text/css" rel="stylesheet">        
-        <script src="serverstub.js" defer></script>
-        <script src="client.js" defer></script>
+        <link href="/static/client.css" type="text/css" rel="stylesheet">        
+        <script src="/static/serverstub .js" defer></script>
+        <script src="/static/client.js" defer></script>
 
         <script id="welcomeview" type="text/view">
             <!-- <h1 class="title">Welcome</h1> -->
             <div id="welcome-container">
-              <img src="wimage.png"/>
+              <img src="/static/wimage.png"/>
               <div id="forms">
                 <fieldset id="signin-fieldset">
                 <!-- <h2>Sign in:</h2> -->
@@ -56,7 +56,7 @@
                 <div id="home-panel" class="tab-panel" style="display: block;">
                   <div class="profile">
                     <article class="user">
-                        <img src="default.jpg" alt="profile photo"/>
+                        <img src="/static/default.jpg" alt="profile photo"/>
                         <article class="about">
                             <div class="full-name">
                               <h2 id="firstname"></h2><h2 id="familyname"></h2>
@@ -97,7 +97,7 @@
                     <div class="profile">
                       <main>
                         <article class="user">
-                            <img src="default.jpg" alt="profile photo"/>
+                            <img src="/static/default.jpg" alt="profile photo"/>
                             <article class="about">
                                 <div class="full-name">
                                   <h2 id="browse-firstname"></h2><h2 id="browse-familyname"></h2>
